--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 							Us</h2>
 
 
-						<P>📧 Email:poojamorem2001@gmail.com</P>
+						<P>📧 Email:growmorejdi@gmail.com</P>
 						<P>📞 Phone:9737779993</P>
 						<p>📍 Shop No : 34, Shilalekh Residency, Canal Road, Parvat Patia, Surat - 395010.</p>
 
@@ -280,7 +280,7 @@
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/grow_more_jdi?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
 							class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=poojamorem2001@gmail.com"
+					<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=growmorejdi@gmail.com"
 							class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					<br>
 					<br> © Copyright 2025 GrowMore. All rights reserved
