--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@ With hands-on training and personalized coaching, we help you master the art of 
 					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/grow_more_jdi?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
 							class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=poojamorem2001@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=growmorejdi@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 				</section>
 			</ul>
 
